# ai-agent-hackathon

./: .gitignore  PLAN-SIMPLE.md  PLAN.md  README.md  run.bat
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  __main__.py  main.py
backend/app/agent/: graph.py  llm.py  prompts.py  state.py  util.py  verdict.py
backend/app/agent/nodes/: __init__.py  analyze.py  companion.py  extract.py  intake.py  intent.py  synthesize.py  verify.py
backend/app/api/: deps.py
backend/app/api/routers/: check.py  email_accounts.py  guardians.py  intelligence.py  reports.py
backend/app/bot/: lang_buttons.py  replies.py  telegram_bot.py
backend/app/core/: config.py  db.py
backend/app/ingest/: email_monitor.py
backend/app/integrations/: brightdata.py  daytona.py  email_forensics.py  ocr.py  sensenova.py  videodb_stt.py  whisper_stt.py
backend/app/models/: tables.py
backend/app/schemas/: check.py
backend/app/services/: alert_service.py  check_service.py  guardian_service.py  intelligence_service.py  member_service.py  memory_store.py
backend/scripts/: gen_clients.sh  seed.py  set_bot_commands.py  smoke.py
backend/tests/: test_forensics.py  test_graph.py
docs/: README.md
frontend/: README.md
mobile/: README.md
