[project]
name = "scamguardian"
version = "0.1.0"
description = "Scam Guardian — Telegram + autonomous email scam detection (multi-phase LangGraph agent), demo backend."
requires-python = ">=3.12"

# Core deps must install for the one process to boot.
# Heavy / optional sponsor SDKs (faster-whisper, videodb, daytona) are imported lazily
# inside their integration modules, so the app still boots if they are absent.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "python-telegram-bot[job-queue]>=22,<23",
    "langgraph>=1.2,<2",
    "langchain>=1.3,<2",
    "langchain-openai>=1.2,<2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "tldextract>=5.1",
    "idna>=3.7",
]

[project.optional-dependencies]
# Install on demand: `pip install -e ".[stt]"` etc. Kept optional so the core boots fast.
stt = ["faster-whisper>=1.0"]
videodb = ["videodb>=0.2"]
daytona = ["daytona>=0.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
